# wafer

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  justfile
spec-tests/: Cargo.toml  build.rs  wast.json
spec-tests/spec-test-macro/: Cargo.toml
spec-tests/spec-test-macro/src/: lib.rs
spec-tests/src/: lib.rs
spec-tests/wast2json/: Cargo.toml
spec-tests/wast2json/src/: lib.rs
src/: lib.rs
src/core_compat/: mod.rs
src/decode/: decodable_impls.rs  expr.rs  mod.rs
src/parse/: expr.rs  leb128.rs  mod.rs  parsable_impls.rs
src/storage/: mod.rs  std.rs
src/types/: instr.rs  mod.rs
src/validate/: expr.rs  mod.rs  validate_impls.rs
