# Copyright (c) 2025 Joshua Seaton
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[package]
name = "spec-tests"
version.workspace = true
edition.workspace = true

description = ""

license.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
wafer = { path = "..", features = ["std"] }
spec-test-macro = { path = "spec-test-macro" }
wast2json = { path = "wast2json" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wast2json = { path = "wast2json" }
