# Copyright (c) 2025 Joshua Seaton
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

[package]
name = "spec-test-macro"
version.workspace = true
edition.workspace = true

description = "Proc macro for generating WebAssembly spec tests"

license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wast2json = { path = "../wast2json" }

[build-dependencies]
